pipes - completed - using async pipe

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,8 @@
       >
         Add Server
       </button>
+      <br />
+      <h1 class="display-5">App Status: {{ appStatus | async }}</h1>
       <ul class="list-group">
         <li
           class="list-group-item"
