--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,10 +18,15 @@
       </button>
       <br />
       <h1 class="display-5">App Status: {{ appStatus | async }}</h1>
+      <h1 class="display-4">name: {{ nameToSort | reverse }}</h1>
       <ul class="list-group">
         <li
           class="list-group-item"
-          *ngFor="let server of servers | filter: filteredStatus:'status'"
+          *ngFor="
+            let server of servers
+              | sort: 'name'
+              | filter: filteredStatus:'status'
+          "
           [ngClass]="getStatusClasses(server)"
         >
           <span class="badge">
